text-align classes bug fixed

--- a/css/ploume.css
+++ b/css/ploume.css
@@ -1526,13 +1526,13 @@ a {
   .is-9-xs {
     font-size: .25em;
   }
-  .is .text-centered-xs, .is .text-center-xs {
+  .text-centered-xs, .text-center-xs {
     text-align: center;
   }
-  .is .text-right-xs {
+  .text-right-xs {
     text-align: right;
   }
-  .is .text-justify-xs {
+  .text-justify-xs {
     text-align: justify;
   }
 }
@@ -1580,13 +1580,13 @@ a {
   .is-9-s {
     font-size: .25em;
   }
-  .is .text-centered-s, .is .text-center-s {
+  .text-centered-s, .text-center-s {
     text-align: center;
   }
-  .is .text-right-s {
+  .text-right-s {
     text-align: right;
   }
-  .is .text-justify-s {
+  .text-justify-s {
     text-align: justify;
   }
 }
